# ANORA-ULTIMIATE

./: .env.example  DirStruc  Dockerfile  README.md  anora_deploy.py  anora_standalone.py  anora_ultimate_deploy.py  config.py  database_migrate.py  database_migrate2.py  docker-compose.yml  fix_database.py  main.py  pyproject.toml  quick_start.py  railway.json  requirements.txt  run_bot.py  run_deploy.py
anora/: __init__.py  brain.py  core.py  database.py  intimacy.py  memory_persistent.py  role_base.py  roleplay.py  roleplay_ai.py  roleplay_integration.py  thinking.py
anora99/: __init__.py  brain.py  core.py  emotional_engine.py  intimacy.py  intimacy_core.py  intimacy_flow.py  location_manager.py  memory_persistent.py  relationship.py  roleplay_ai.py  roleplay_integration.py  worker.py
anora99/roles/: __init__.py  ipar_role.py  pelakor_role.py  role_manager.py  teman_kantor_role.py
app/: __init__.py
app/core/: conflict_engine.py  decision_engine.py  thinking_engine.py
app/database/: db.py
bot/: __init__.py  callbacks.py  handlers.py  middleware.py  webhook.py
command/: __init__.py  admin.py  cancel.py  character.py  ex_fwb.py  help.py  hts.py  memory.py  public.py  ranking.py  sessions.py  start.py  status.py  threesome.py
core/: __init__.py  ai_engine.py  context_analyzer.py  intent_analyzer.py  name_detector.py  prompt_builder.py
database/: __init__.py  connection.py  migrate.py  models.py  repository.py
dynamics/: emotional_flow.py
identity/: manager.py
intimacy/: __init__.py  clothing.py  cycle.py  leveling.py  stamina.py
memory/: emotional_memory.py  long_term_memory.py  state_persistence.py  working_memory.py
montoring/: __init__.py  state_persistence.py
threesome/: __init__.py  dynamics.py  manager.py
tracking/: __init__.py
utils/: __init__.py  exceptions.py  family.py  helpers.py  preferences.py  promises.py
