# pyproject.toml
# AMORIA - Virtual Human dengan Jiwa

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amoria"
version = "1.0.0"
description = "Virtual Human dengan Jiwa - 100% AI Generate"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AMORIA Team", email = "support@amoria.ai"}
]
keywords = ["telegram", "ai", "virtual-human", "chatbot", "deepseek"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Communications :: Chat",
]
requires-python = ">=3.9"
dependencies = [
    "python-telegram-bot>=21.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "openai>=1.65.0",
    "aiosqlite>=0.19.0",
    "loguru>=0.7.0",
    "aiofiles>=23.2.0",
    "python-dateutil>=2.8.2",
    "emoji>=2.8.0",
    "httpx>=0.25.0",
    "orjson>=3.9.0",
    "prometheus-client>=0.19.0",
    "psutil>=5.9.0",
    "cryptography>=41.0.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/amoria"
"Bug Reports" = "https://github.com/yourusername/amoria/issues"
"Documentation" = "https://github.com/yourusername/amoria#readme"

[project.scripts]
amoria = "main:main"

[tool.setuptools.packages.find]
include = ["amoria*"]
exclude = ["tests*", "docs*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["amoria"]
omit = ["tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if False:",
]
